Seccion 6 en GitHub Pages

--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -1,4 +1,5 @@
 <h4>Agregar Personaje</h4>
+<!--Este ngSubmit es el que hace que no haya que poner click en el botón-->
 <form class = "row" (ngSubmit)="emitCharacter()">
   <input type="text" [(ngModel)]="character.name" name="name" class = "form-control mb-2" placeholder="Nombre">
 
